add clicommand